  * Fix build-time check for dvdnav.
  * Allow use of GraphicsMagick instead of ImageMagick.
  * Fix build on Debian GNU/kFreeBSD (broken in 1.1.19).
  * Add a Japanese translation from Takeshi Hamasaki.
  * Czech translation update.
  * New MinGW-w64 port, various portability fixes.
  * MinGW port updates.
  * Possibility to disable HW acceleration in directx video output.

xine-lib (1.1.19) 2010-07-25
  * Handle odd widths properly (for ffmpeg-decoded video).
  * Make buildable with current (external) libdvdnav & libdvdread.
  * Fix V4L2 check.
  * Add support for Ogg tag 'DISCNUMBER' and ID3 tag 'TPOS'.
  * Add support for EAC3.
  * Recognise video/mp2t and video/mp2p.
  * TTA fixes.
  * Add support for Xv gamma adjustment.
  * Better recovery from ALSA-reported errors.
  * Report stream buffer stats to the application.
  * Recognise and handle the WebM container format.
    (VP8 video is not yet supported.)
  * Recognise ScreamTracker 2 & 3 files.
  * Fix playback of the first file handled by the modplug demuxer.
  * Refuse to build with known-broken libmodplug (0.8.8).
    http://bugs.debian.org/588465
  * Fix a potential freeing of unallocated memory.
    [Rafael Dominguez-Vega, MWR InfoSecurity]

xine-lib (1.1.18.1) 2010-03-06
  * Oops. compat.c (for DXR3 support) was omitted.
  * Fix up V4L/V4L2 compilation. Some non-Linux have V4L2 but not V4L.
  * Fix a size check (wrong variable, causing int/ptr comparison) in rmff.c.
  * Fix build with the old, outdated and deprecated internal ffmpeg.

xine-lib (1.1.18) 2010-02-23
  * Bump the FLAC decoder's priority above ffmpegaudio. This should fix
    various problems with FLAC playback.
  * Build fix (undefined symbol) for when using older ffmpeg.
  * TTA demuxer fixes; allow seeking.
  * More meta-information tags.
    Only the Ogg demuxer knows about these at present.
  * Added basic support for .qtl (Quicktime media link).
  * "Fixed" playback of 24-bit FLAC.
  * Fixed playback of 24-bit LPCM.